src/main/metadata-au/objects/VIN_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>BodyType__c</fullName>
        <label>BodyType</label>
        <picklist>
            <picklistValues>
                <fullName>3 door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 door Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mpv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People Mover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SportCoupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Tourer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wagon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>VIN Mappings (Car Model)</relationshipLabel>
        <relationshipName>VIN_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classifier__c</fullName>
        <label>Classifier</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'NZ') ,'NZ', 
IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP','NA'))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WMI__c</fullName>
        <label>WMI</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>VIN Mapping</label>
    <nameField>
        <displayFormat>VIN-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIN Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>  